--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes marquee {
+    to {
+        transform: translateX(calc(-100% - 106px));
+    }
+}
+
+.animate-marquee {
+    animation: marquee 15s linear infinite;
+}
